user module in progress

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -100,3 +100,10 @@ body {
 .material-icons {
   cursor: pointer;
 }
+
+
+.error {
+    text-align: center;
+    color: red;
+    font-size: 12px;
+}
